kubernetes/test-nginx-gapi-cip.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webserver-test-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: webserver-test-2
spec:
  selector:
    matchLabels:
      app: webserver
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: webserver
    spec:
      serviceAccountName: webserver-sa-2
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: webserver
        image: nginxinc/nginx-unprivileged:alpine
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
      nodeSelector:
        topology.kubernetes.io/usage: "general"
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc-2
  namespace: webserver-test-2
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: webserver-gateway-lb
  namespace: webserver-test-2
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webserver-route-2
  namespace: webserver-test-2
spec:
  parentRefs:
  - name: webserver-gateway-lb
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: webserver-svc-2
      port: 8080
