kubernetes/test-nginx-gapi-lb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webserver-test-2
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: webserver-test-2
spec:
  selector:
    matchLabels:
      app: webserver
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: webserver
    spec:
      serviceAccountName: webserver-sa-2
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: webserver
        image: nginxinc/nginx-unprivileged:alpine
        ports:
        - containerPort: 8080
          name: web
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
      nodeSelector:
        topology.kubernetes.io/usage: "general"
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc-2
  namespace: webserver-test-2
spec:
  selector:
    app: webserver
  ports:
  - name: web
    port: 8080
    targetPort: web # Deployment port pod
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: webserver-gateway-lb
  namespace: webserver-test-2
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.1.23
  listeners:
  - name: http-listener
    protocol: HTTP
    port: 8080
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: webserver-egress-allow-fqdn
spec:
  endpointSelector:
    matchLabels:
      app: webserver
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: kubernetes.io
